--- a/server/argocd-server-deployment.yaml
+++ b/server/argocd-server-deployment.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: argocd-server
       containers:
       - name: argocd-server
-        image: quay.io/argoproj/argocd:2.4.16
+        image: quay.io/argoproj/argocd:latest
         imagePullPolicy: Always
         command: [argocd-server]
         env:
