--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 images:
 - name: quay.io/argoproj/argocd
   newName: quay.io/argoproj/argocd
-  newTag: 2.4.16
+  newTag: latest
 resources:
 - ./application-controller
 - ./dex
